// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupWidget DOM Rendering renders correctly 1`] = `
<div
  className="groupWidget"
>
  <BlendedBackground
    backgroundUrl={undefined}
    blendWithOperatorColor={false}
    style={
      Object {
        "zIndex": "-1",
      }
    }
  />
  <IconHeader
    iconUrl="assets/icons/world_cup_2018_inverted.svg"
    localStyles={
      Array [
        "KambiWidget-primary-background-color",
        "headerIcon",
      ]
    }
    subtitle="Group Finishing Position"
    title={undefined}
  >
    <div
      style={
        Object {
          "backgroundImage": "url(assets/icons/world_cup_2018_inverted.svg)",
          "backgroundSize": "contain",
          "height": "100%",
        }
      }
    />
  </IconHeader>
  <TabPagination
    onTabChange={[Function]}
    renderTab={[Function]}
    renderTabList={[Function]}
    selected={1}
  >
    <GroupList />
    <GroupList />
  </TabPagination>
</div>
`;

exports[`GroupWidget DOM Rendering renders correctly with custom backgroundUrl 1`] = `
<div
  className="groupWidget"
>
  <BlendedBackground
    backgroundUrl="assets/overview-bw-bg-mobile.jpg"
    blendWithOperatorColor={false}
    style={
      Object {
        "zIndex": "-1",
      }
    }
  />
  <IconHeader
    iconUrl="assets/icons/world_cup_2018_inverted.svg"
    localStyles={
      Array [
        "KambiWidget-primary-background-color",
        "headerIcon",
      ]
    }
    subtitle="Group Finishing Position"
    title={undefined}
  >
    <div
      style={
        Object {
          "backgroundImage": "url(assets/icons/world_cup_2018_inverted.svg)",
          "backgroundSize": "contain",
          "height": "100%",
        }
      }
    />
  </IconHeader>
  <TabPagination
    onTabChange={[Function]}
    renderTab={[Function]}
    renderTabList={[Function]}
    selected={1}
  >
    <GroupList />
    <GroupList />
  </TabPagination>
</div>
`;
